--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Syne:wght@600;700;800&display=swap" rel="stylesheet">
-  <link rel="preload" as="image" href="img/headerai.jpg">
+  <link rel="preload" as="image" href="../img/headerai.jpg">
   <link rel="icon" href="img/favicon.png">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
